# binary-install

./: README.md  package-lock.json  package.json
example-binary/: Cargo.toml
example-binary/src/: main.rs
example-binary/tests/: c.rs  stdin.rs
