[package]
name = "binary-install-example"
version = "1.1.0"
authors = ["Avery Harnish <averyharnish@gmail.com>"]
edition = "2018"
description = "An example binary to test out https://npmjs.com/package/binary-install"
homepage = "https://npmjs.com/package/binary-install"
repository = "https://github.com/EverlastingBugstopper/binary-install"

[dependencies]
clap = "2.33.3"
console = "0.13.0"

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.5"
